ai-descriptor-derive/tests/ui/compile_fail/item_features_missing_ai.stderr
error: Structs deriving ItemWithFeatures must have an #[ai("...")] attribute for the header
 --> tests/ui/compile_fail/item_features_missing_ai.rs:8:8
  |
8 | struct Potion {
  |        ^^^^^^
